@@ -15,8 +15,9 @@ kano-toolset (3.15.0-0) unstable; urgency=low
   * Fix logging tests to work with PyTest
   * Mark Lua tests as such
   * Update Raspberry Pi board revision numbers and detection functions
+  * Implemented caching for board revision lib functions
 
- -- Team Kano <dev@kano.me>  Mon, 5 Feb 2018 13:55:00 +0100
+ -- Team Kano <dev@kano.me>  Tue, 6 Feb 2018 16:20:00 +0100
 
 kano-toolset (3.14.0-0) unstable; urgency=low
 
